ucxclient-wrapper/ucxclient_wrapper_generated.h

/* Forward declaration */
typedef struct ucx_instance ucx_instance_t;
int32_t ucx_socket_GetLastError(ucx_instance_t *inst, int32_t * pErrorCode);
int32_t ucx_socket_Bind(ucx_instance_t *inst, int32_t socket_handle, int32_t local_port);
int32_t ucx_socket_Listen1(ucx_instance_t *inst, int32_t socket_handle);
int32_t ucx_socket_Listen2(ucx_instance_t *inst, int32_t socket_handle, int32_t port);
int32_t ucx_socket_ReceiveFrom(ucx_instance_t *inst, int32_t socket_handle, int32_t length, uint8_t * pDataBuf, uCxSocketReceiveFrom_t * pSocketReceiveFromRsp);
int32_t ucx_socket_GetPeerAddress(ucx_instance_t *inst, int32_t socket_handle, uCxSocketGetPeerAddress_t * pSocketGetPeerAddressRsp);
void ucx_socket_ListStatusBegin(ucx_instance_t *inst);
bool ucx_socket_ListStatusGetNext(ucx_instance_t *inst, uCxSocketListStatus_t * pSocketListStatusRsp);
int32_t ucx_socket_GetStatus(ucx_instance_t *inst, int32_t socket_handle, uCxSocketGetStatus_t * pSocketGetStatusRsp);
int32_t ucx_socket_SetOption(ucx_instance_t *inst, int32_t socket_handle, uSocketOption_t option, int32_t value);
int32_t ucx_socket_GetOption(ucx_instance_t *inst, int32_t socket_handle, uSocketOption_t option, int32_t * pValue);
int32_t ucx_socket_GetHostByName(ucx_instance_t *inst, const char * host_name, uSockIpAddress_t * pHostIp);
void ucx_socket_RegisterConnect(ucx_instance_t *inst, uUESOC_t callback);
void ucx_socket_RegisterDataAvailable(ucx_instance_t *inst, uUESODA_t callback);
void ucx_socket_RegisterClosed(ucx_instance_t *inst, uUESOCL_t callback);
void ucx_socket_RegisterIncomingConnection(ucx_instance_t *inst, uUESOIC_t callback);
/* ========== SPS FUNCTIONS ========== */
int32_t ucx_sps_Connect1(ucx_instance_t *inst, int32_t conn_handle);
int32_t ucx_sps_Connect2(ucx_instance_t *inst, int32_t conn_handle, int32_t flow_control);
int32_t ucx_sps_SetServiceEnable(ucx_instance_t *inst, uSpsServiceOption_t service_option);
int32_t ucx_sps_GetServiceEnable(ucx_instance_t *inst, uSpsServiceOption_t * pServiceOption);
int32_t ucx_sps_Write(ucx_instance_t *inst, int32_t conn_handle, const uint8_t * binary_data, int32_t binary_data_len);
int32_t ucx_sps_SetDataMode(ucx_instance_t *inst, uReadMode_t read_mode);
int32_t ucx_sps_GetDataMode(ucx_instance_t *inst, uReadMode_t * pReadMode);
int32_t ucx_sps_Read(ucx_instance_t *inst, int32_t conn_handle, int32_t length, uint8_t * pDataBuf);
void ucx_sps_RegisterConnect(ucx_instance_t *inst, uUESPSC_t callback);
void ucx_sps_RegisterDisconnect(ucx_instance_t *inst, uUESPSDC_t callback);
void ucx_sps_RegisterDataAvailable(ucx_instance_t *inst, uUESPSDA_t callback);
/* ========== SYSTEM FUNCTIONS ========== */
int32_t ucx_system_Reboot(ucx_instance_t *inst);
int32_t ucx_system_StartSerialFirmwareUpdate1(ucx_instance_t *inst, int32_t baud_rate);
int32_t ucx_system_StartSerialFirmwareUpdate2(ucx_instance_t *inst, int32_t baud_rate, int32_t flow_control);
int32_t ucx_system_StartSerialFirmwareUpdateDefault(ucx_instance_t *inst);
int32_t ucx_system_StartBootLoader1(ucx_instance_t *inst, int32_t baud_rate);
int32_t ucx_system_StartBootLoader2(ucx_instance_t *inst, int32_t baud_rate, int32_t flow_control);
int32_t ucx_system_StartBootLoaderDefault(ucx_instance_t *inst);
int32_t ucx_system_StoreConfiguration(ucx_instance_t *inst);
int32_t ucx_system_GetLocalAddress(ucx_instance_t *inst, uInterfaceId_t interface_id, uMacAddress_t * pAddress);
int32_t ucx_system_SetLocalAddress(ucx_instance_t *inst, uInterfaceId_t interface_id, uMacAddress_t * address);
int32_t ucx_system_FactoryReset(ucx_instance_t *inst);
int32_t ucx_system_DefaultSettings(ucx_instance_t *inst);
int32_t ucx_system_SetUartSettings1(ucx_instance_t *inst, int32_t baud_rate);
int32_t ucx_system_SetUartSettings2(ucx_instance_t *inst, int32_t baud_rate, int32_t flow_control);
int32_t ucx_system_SetUartSettings3(ucx_instance_t *inst, int32_t baud_rate, int32_t flow_control, int32_t change_after_confirm);
int32_t ucx_system_GetUartSettings(ucx_instance_t *inst, uCxSysGetUartSettings_t * pSysGetUartSettingsRsp);
int32_t ucx_system_GetLastErrorCode(ucx_instance_t *inst, int32_t * pErrorCode);
int32_t ucx_system_SetExtendedError(ucx_instance_t *inst, uSysExtendedErrors_t extended_errors);
int32_t ucx_system_GetExtendedError(ucx_instance_t *inst, uSysExtendedErrors_t * pExtendedErrors);
int32_t ucx_system_SetUnixTime(ucx_instance_t *inst, const uint8_t * unix_time, int32_t unix_time_len);
bool ucx_system_GetUnixTimeBegin(ucx_instance_t *inst, uByteArray_t * pUnixTime);
int32_t ucx_system_SetEchoOff(ucx_instance_t *inst);
int32_t ucx_system_SetEchoOn(ucx_instance_t *inst);
int32_t ucx_system_GetEcho(ucx_instance_t *inst, uSysEchoOn_t * pEchoOn);
int32_t ucx_system_SetEscSequenceChar(ucx_instance_t *inst, int32_t escape_char);
int32_t ucx_system_GetEscSequenceChar(ucx_instance_t *inst, int32_t * pEscapeChar);
int32_t ucx_system_SetLineTermChar(ucx_instance_t *inst, int32_t line_term);
int32_t ucx_system_GetLineTermChar(ucx_instance_t *inst, int32_t * pLineTerm);
int32_t ucx_system_SetRspFormatChar(ucx_instance_t *inst, int32_t resp_format);
int32_t ucx_system_GetRspFormatChar(ucx_instance_t *inst, int32_t * pRespFormat);
int32_t ucx_system_SetBackspaceChar(ucx_instance_t *inst, int32_t backspace);
int32_t ucx_system_GetBackspaceChar(ucx_instance_t *inst, int32_t * pBackspace);
int32_t ucx_system_SetEscSequenceSettings(ucx_instance_t *inst, int32_t pre_timeout, int32_t post_timeout, int32_t escape_timeout);
int32_t ucx_system_GetEscSequenceSettings(ucx_instance_t *inst, uCxSysGetEscSequenceSettings_t * pSysGetEscSequenceSettingsRsp);
/* ========== WIFI FUNCTIONS ========== */
int32_t ucx_wifi_SetHostname(ucx_instance_t *inst, const char * host_name);
bool ucx_wifi_GetHostnameBegin(ucx_instance_t *inst, const char * * ppHostName);
int32_t ucx_wifi_StationSetSecurityEnterprise5(ucx_instance_t *inst, int32_t wlan_handle, uWifiTlsVersion_t tls_version, const char * ca_name, const char * client_cert_name, const char * client_key_name);