ucx-avalonia-app/Services/UcxNativeGenerated.cs


        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_socket_GetLastError(IntPtr instance, out int pErrorCode);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_socket_Bind(IntPtr instance, int socket_handle, int local_port);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_socket_Listen1(IntPtr instance, int socket_handle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_socket_Listen2(IntPtr instance, int socket_handle, int port);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_socket_ReceiveFrom(IntPtr instance, int socket_handle, int length, out byte pDataBuf, out int pSocketReceiveFromRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_socket_GetPeerAddress(IntPtr instance, int socket_handle, out int pSocketGetPeerAddressRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_socket_ListStatusBegin(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_socket_ListStatusGetNext(IntPtr instance, out int pSocketListStatusRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_socket_GetStatus(IntPtr instance, int socket_handle, out int pSocketGetStatusRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_socket_SetOption(IntPtr instance, int socket_handle, int option, int value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_socket_GetOption(IntPtr instance, int socket_handle, int option, out int pValue);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_socket_GetHostByName(IntPtr instance, [MarshalAs(UnmanagedType.LPStr)] string host_name, out int pHostIp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_socket_RegisterConnect(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_socket_RegisterDataAvailable(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_socket_RegisterClosed(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_socket_RegisterIncomingConnection(IntPtr instance, int callback);

        #endregion

        #region SPS Functions

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_sps_Connect1(IntPtr instance, int conn_handle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_sps_Connect2(IntPtr instance, int conn_handle, int flow_control);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_sps_SetServiceEnable(IntPtr instance, int service_option);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_sps_GetServiceEnable(IntPtr instance, out int pServiceOption);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_sps_Write(IntPtr instance, int conn_handle, IntPtr binary_data, int binary_data_len);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_sps_SetDataMode(IntPtr instance, int read_mode);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_sps_GetDataMode(IntPtr instance, out int pReadMode);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_sps_Read(IntPtr instance, int conn_handle, int length, out byte pDataBuf);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_sps_RegisterConnect(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_sps_RegisterDisconnect(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_sps_RegisterDataAvailable(IntPtr instance, int callback);

        #endregion

        #region SYSTEM Functions

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_Reboot(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_StartSerialFirmwareUpdate1(IntPtr instance, int baud_rate);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_StartSerialFirmwareUpdate2(IntPtr instance, int baud_rate, int flow_control);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_StartSerialFirmwareUpdateDefault(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_StartBootLoader1(IntPtr instance, int baud_rate);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_StartBootLoader2(IntPtr instance, int baud_rate, int flow_control);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_StartBootLoaderDefault(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_StoreConfiguration(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_GetLocalAddress(IntPtr instance, int interface_id, out int pAddress);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_SetLocalAddress(IntPtr instance, int interface_id, out int address);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_FactoryReset(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_DefaultSettings(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_SetUartSettings1(IntPtr instance, int baud_rate);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_SetUartSettings2(IntPtr instance, int baud_rate, int flow_control);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_SetUartSettings3(IntPtr instance, int baud_rate, int flow_control, int change_after_confirm);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_GetUartSettings(IntPtr instance, out int pSysGetUartSettingsRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_GetLastErrorCode(IntPtr instance, out int pErrorCode);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_SetExtendedError(IntPtr instance, int extended_errors);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_GetExtendedError(IntPtr instance, out int pExtendedErrors);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_SetUnixTime(IntPtr instance, IntPtr unix_time, int unix_time_len);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_system_GetUnixTimeBegin(IntPtr instance, out int pUnixTime);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_SetEchoOff(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_SetEchoOn(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_GetEcho(IntPtr instance, out int pEchoOn);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_SetEscSequenceChar(IntPtr instance, int escape_char);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_GetEscSequenceChar(IntPtr instance, out int pEscapeChar);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_SetLineTermChar(IntPtr instance, int line_term);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_GetLineTermChar(IntPtr instance, out int pLineTerm);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_SetRspFormatChar(IntPtr instance, int resp_format);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_GetRspFormatChar(IntPtr instance, out int pRespFormat);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_SetBackspaceChar(IntPtr instance, int backspace);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_GetBackspaceChar(IntPtr instance, out int pBackspace);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_SetEscSequenceSettings(IntPtr instance, int pre_timeout, int post_timeout, int escape_timeout);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_system_GetEscSequenceSettings(IntPtr instance, out int pSysGetEscSequenceSettingsRsp);

        #endregion

        #region WIFI Functions

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_SetHostname(IntPtr instance, [MarshalAs(UnmanagedType.LPStr)] string host_name);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_wifi_GetHostnameBegin(IntPtr instance, [MarshalAs(UnmanagedType.LPStr)] string ppHostName);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_wifi_StationSetSecurityEnterprise5(IntPtr instance, int wlan_handle, int tls_version, [MarshalAs(UnmanagedType.LPStr)] string ca_name, [MarshalAs(UnmanagedType.LPStr)] string client_cert_name, [MarshalAs(UnmanagedType.LPStr)] string client_key_name);
